--- a/api-reference/endpoint/ethgetstorageat.mdx
+++ b/api-reference/endpoint/ethgetstorageat.mdx
@@ -13,22 +13,22 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField path="v2" type="string" default="v2">
     Use the new V2 base URL https://api.etherscan.io/v2/api
   </ParamField>
-  <ParamField query="chainid" type="string" initialValue="1">
+  <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="proxy">
+  <ParamField query="module" type="string" default="proxy">
     Set to `proxy` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="eth_getStorageAt">
+  <ParamField query="action" type="string" default="eth_getStorageAt">
     Set to `eth_getStorageAt` for this endpoint.
   </ParamField>
-  <ParamField query="address" type="string" initialValue="0x6e03d9cce9d60f3e9f2597e13cd4c54c55330cfd">
+  <ParamField query="address" type="string" default="0x6e03d9cce9d60f3e9f2597e13cd4c54c55330cfd">
     The address to query.
   </ParamField>
-  <ParamField query="position" type="string" initialValue="0x0">
+  <ParamField query="position" type="string" default="0x0">
     Storage position in hex.
   </ParamField>
-  <ParamField query="tag" type="string" initialValue="latest">
+  <ParamField query="tag" type="string" default="latest">
     Use `latest`, `earliest`, `pending`, or a block number in hex.
   </ParamField>
   <ParamField query="apikey" type="string">
