--- a/api-reference/endpoint/ethgettransactionreceipt.mdx
+++ b/api-reference/endpoint/ethgettransactionreceipt.mdx
@@ -13,16 +13,16 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField path="v2" type="string" default="v2">
     Use the new V2 base URL https://api.etherscan.io/v2/api
   </ParamField>
-  <ParamField query="chainid" type="string" initialValue="1">
+  <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="proxy">
+  <ParamField query="module" type="string" default="proxy">
     Set to `proxy` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="eth_getTransactionReceipt">
+  <ParamField query="action" type="string" default="eth_getTransactionReceipt">
     Set to `eth_getTransactionReceipt` for this endpoint.
   </ParamField>
-  <ParamField query="txhash" type="string" initialValue="0xadb8aec59e80db99811ac4a0235efa3e45da32928bcff557998552250fa672eb">
+  <ParamField query="txhash" type="string" default="0xadb8aec59e80db99811ac4a0235efa3e45da32928bcff557998552250fa672eb">
     The transaction hash to query.
   </ParamField>
   <ParamField query="apikey" type="string">
