--- a/api-reference/endpoint/addresstokennftbalance.mdx
+++ b/api-reference/endpoint/addresstokennftbalance.mdx
@@ -12,22 +12,22 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField path="v2" type="string" default="v2">
     Use the new V2 base URL https://api.etherscan.io/v2/api
   </ParamField>
-  <ParamField query="chainid" type="string" initialValue="1">
+  <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="account">
+  <ParamField query="module" type="string" default="account">
     Set to `account` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="addresstokennftbalance">
+  <ParamField query="action" type="string" default="addresstokennftbalance">
     Set to `addresstokennftbalance` for this endpoint.
   </ParamField>
-  <ParamField query="address" type="string" initialValue="0x6b52e83941eb10f9c613c395a834457559a80114">
+  <ParamField query="address" type="string" default="0x6b52e83941eb10f9c613c395a834457559a80114">
     Address to check for NFT holdings.
   </ParamField>
-  <ParamField query="page" type="integer" initialValue="1">
+  <ParamField query="page" type="integer" default="1">
     Page number for pagination.
   </ParamField>
-  <ParamField query="offset" type="integer" initialValue="100">
+  <ParamField query="offset" type="integer" default="100">
     Number of records per page.
   </ParamField>
   <ParamField query="apikey" type="string">
