--- a/api-reference/endpoint/addresstokennftinventory.mdx
+++ b/api-reference/endpoint/addresstokennftinventory.mdx
@@ -12,25 +12,25 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField path="v2" type="string" default="v2">
     Use the new V2 base URL https://api.etherscan.io/v2/api
   </ParamField>
-  <ParamField query="chainid" type="string" initialValue="1">
+  <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="account">
+  <ParamField query="module" type="string" default="account">
     Set to `account` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="addresstokennftinventory">
+  <ParamField query="action" type="string" default="addresstokennftinventory">
     Set to `addresstokennftinventory` for this endpoint.
   </ParamField>
-  <ParamField query="address" type="string" initialValue="0x123432244443b54409430979df8333f9308a6040">
+  <ParamField query="address" type="string" default="0x123432244443b54409430979df8333f9308a6040">
     Address to check for inventory.
   </ParamField>
-  <ParamField query="contractaddress" type="string" initialValue="0xed5af388653567af2f388e6224dc7c4b3241c544">
+  <ParamField query="contractaddress" type="string" default="0xed5af388653567af2f388e6224dc7c4b3241c544">
     ERC-721 token contract address to filter by.
   </ParamField>
-  <ParamField query="page" type="integer" initialValue="1">
+  <ParamField query="page" type="integer" default="1">
     Page number for pagination.
   </ParamField>
-  <ParamField query="offset" type="integer" initialValue="100">
+  <ParamField query="offset" type="integer" default="100">
     Number of records per page. Limited to 1000 records per query; use the `page` parameter for subsequent records.
   </ParamField>
   <ParamField query="apikey" type="string">
