--- a/api-reference/endpoint/balance.mdx
+++ b/api-reference/endpoint/balance.mdx
@@ -12,7 +12,7 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" required default="test">
+  <ParamField query="module" type="string" required default="account">
     Set to `account` for this endpoint.
   </ParamField>
   <ParamField query="action" type="string" default="balance">
