--- a/api-reference/endpoint/chainsize.mdx
+++ b/api-reference/endpoint/chainsize.mdx
@@ -12,28 +12,28 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField path="v2" type="string" default="v2">
     Use the new V2 base URL https://api.etherscan.io/v2/api
   </ParamField>
-  <ParamField query="chainid" type="string" initialValue="1">
+  <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="stats">
+  <ParamField query="module" type="string" default="stats">
     Set to `stats` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="chainsize">
+  <ParamField query="action" type="string" default="chainsize">
     Set to `chainsize` for this endpoint.
   </ParamField>
-  <ParamField query="startdate" type="string" initialValue="2019-02-01">
+  <ParamField query="startdate" type="string" default="2019-02-01">
     Starting date in `yyyy-MM-dd` format.
   </ParamField>
-  <ParamField query="enddate" type="string" initialValue="2019-02-28">
+  <ParamField query="enddate" type="string" default="2019-02-28">
     Ending date in `yyyy-MM-dd` format.
   </ParamField>
-  <ParamField query="clienttype" type="string" initialValue="geth">
+  <ParamField query="clienttype" type="string" default="geth">
     Node client to query, either `geth` or `parity`.
   </ParamField>
-  <ParamField query="syncmode" type="string" initialValue="default">
+  <ParamField query="syncmode" type="string" default="default">
     Node type to run, either `default` or `archive`.
   </ParamField>
-  <ParamField query="sort" type="string" initialValue="asc">
+  <ParamField query="sort" type="string" default="asc">
     Sort order either `desc` for the latest results first or `asc` for the oldest results first.
   </ParamField>
   <ParamField query="apikey" type="string">
