--- a/api-reference/endpoint/checkverifystatus.mdx
+++ b/api-reference/endpoint/checkverifystatus.mdx
@@ -13,16 +13,16 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField path="v2" type="string" default="v2">
     Use the new V2 base URL https://api.etherscan.io/v2/api
   </ParamField>
-  <ParamField query="chainid" type="string" initialValue="1">
+  <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="contract">
+  <ParamField query="module" type="string" default="contract">
     Set to `contract` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="checkverifystatus">
+  <ParamField query="action" type="string" default="checkverifystatus">
     Set to `checkverifystatus` for this endpoint.
   </ParamField>
-  <ParamField query="guid" type="string" initialValue="x3ryqcqr1zdknhfhkimqmizlcqpxncqc6nrvp3pgrcpfsqedqi">
+  <ParamField query="guid" type="string" default="x3ryqcqr1zdknhfhkimqmizlcqpxncqc6nrvp3pgrcpfsqedqi">
     The GUID received from the verification request.
   </ParamField>
   <ParamField query="apikey" type="string">
