--- a/api-reference/endpoint/dailyavgblocktime.mdx
+++ b/api-reference/endpoint/dailyavgblocktime.mdx
@@ -9,22 +9,22 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
 
 <CreditChip description="Returns the daily average time for a block to be mined" pro={true} />
 
-<ParamField query="chainid" type="string" initialValue="1">
+<ParamField query="chainid" type="string" default="1">
   Chain ID you query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
 </ParamField>
-<ParamField query="module" type="string" initialValue="stats">
+<ParamField query="module" type="string" default="stats">
   Set to `stats` for this endpoint.
 </ParamField>
-<ParamField query="action" type="string" initialValue="dailyavgblocktime">
+<ParamField query="action" type="string" default="dailyavgblocktime">
   Set to `dailyavgblocktime` for this endpoint.
 </ParamField>
-<ParamField query="startdate" type="string" initialValue="2019-02-01">
+<ParamField query="startdate" type="string" default="2019-02-01">
   Starting date in `yyyy-MM-dd` format.
 </ParamField>
-<ParamField query="enddate" type="string" initialValue="2019-02-28">
+<ParamField query="enddate" type="string" default="2019-02-28">
   Ending date in `yyyy-MM-dd` format.
 </ParamField>
-<ParamField query="sort" type="string" initialValue="asc">
+<ParamField query="sort" type="string" default="asc">
   Sort order, either `asc` or `desc`.
 </ParamField>
 <ParamField query="apikey" type="string">
