--- a/api-reference/endpoint/ethcall.mdx
+++ b/api-reference/endpoint/ethcall.mdx
@@ -13,22 +13,22 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField path="v2" type="string" default="v2">
     Use the new V2 base URL https://api.etherscan.io/v2/api
   </ParamField>
-  <ParamField query="chainid" type="string" initialValue="1">
+  <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="proxy">
+  <ParamField query="module" type="string" default="proxy">
     Set to `proxy` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="eth_call">
+  <ParamField query="action" type="string" default="eth_call">
     Set to `eth_call` for this endpoint.
   </ParamField>
-  <ParamField query="to" type="string" initialValue="0xAEEF46DB4855E25702F8237E8f403FddcaF931C0">
+  <ParamField query="to" type="string" default="0xAEEF46DB4855E25702F8237E8f403FddcaF931C0">
     The address to interact with.
   </ParamField>
-  <ParamField query="data" type="string" initialValue="0x70a08231000000000000000000000000e16359506c028e51f16be38986ec5746251e9724">
+  <ParamField query="data" type="string" default="0x70a08231000000000000000000000000e16359506c028e51f16be38986ec5746251e9724">
     Hash of the method signature and encoded parameters.
   </ParamField>
-  <ParamField query="tag" type="string" initialValue="latest">
+  <ParamField query="tag" type="string" default="latest">
     Use `latest`, `earliest`, `pending`, or a block number in hex.
   </ParamField>
   <ParamField query="apikey" type="string">
