--- a/api-reference/endpoint/ethgasprice.mdx
+++ b/api-reference/endpoint/ethgasprice.mdx
@@ -13,13 +13,13 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField path="v2" type="string" default="v2">
     Use the new V2 base URL https://api.etherscan.io/v2/api
   </ParamField>
-  <ParamField query="chainid" type="string" initialValue="1">
+  <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="proxy">
+  <ParamField query="module" type="string" default="proxy">
     Set to `proxy` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="eth_gasPrice">
+  <ParamField query="action" type="string" default="eth_gasPrice">
     Set to `eth_gasPrice` for this endpoint.
   </ParamField>
   <ParamField query="apikey" type="string">
