--- a/api-reference/endpoint/ethgettransactionbyblocknumberandindex.mdx
+++ b/api-reference/endpoint/ethgettransactionbyblocknumberandindex.mdx
@@ -13,19 +13,19 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField path="v2" type="string" default="v2">
     Use the new V2 base URL https://api.etherscan.io/v2/api
   </ParamField>
-  <ParamField query="chainid" type="string" initialValue="1">
+  <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="proxy">
+  <ParamField query="module" type="string" default="proxy">
     Set to `proxy` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="eth_getTransactionByBlockNumberAndIndex">
+  <ParamField query="action" type="string" default="eth_getTransactionByBlockNumberAndIndex">
     Set to `eth_getTransactionByBlockNumberAndIndex` for this endpoint.
   </ParamField>
-  <ParamField query="tag" type="string" initialValue="0xC6331D">
+  <ParamField query="tag" type="string" default="0xC6331D">
     Block number in hex format.
   </ParamField>
-  <ParamField query="index" type="string" initialValue="0x11A">
+  <ParamField query="index" type="string" default="0x11A">
     Transaction index position in the block, in hex.
   </ParamField>
   <ParamField query="apikey" type="string">
