--- a/api-reference/endpoint/ethgettransactioncount.mdx
+++ b/api-reference/endpoint/ethgettransactioncount.mdx
@@ -13,19 +13,19 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField path="v2" type="string" default="v2">
     Use the new V2 base URL https://api.etherscan.io/v2/api
   </ParamField>
-  <ParamField query="chainid" type="string" initialValue="1">
+  <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="proxy">
+  <ParamField query="module" type="string" default="proxy">
     Set to `proxy` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="eth_getTransactionCount">
+  <ParamField query="action" type="string" default="eth_getTransactionCount">
     Set to `eth_getTransactionCount` for this endpoint.
   </ParamField>
-  <ParamField query="address" type="string" initialValue="0x4bd5900Cb274ef15b153066D736bf3e83A9ba44e">
+  <ParamField query="address" type="string" default="0x4bd5900Cb274ef15b153066D736bf3e83A9ba44e">
     The address to query.
   </ParamField>
-  <ParamField query="tag" type="string" initialValue="latest">
+  <ParamField query="tag" type="string" default="latest">
     Use `latest`, `earliest`, `pending`, or a block number in hex.
   </ParamField>
   <ParamField query="apikey" type="string">
