--- a/api-reference/endpoint/ethprice.mdx
+++ b/api-reference/endpoint/ethprice.mdx
@@ -12,13 +12,13 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField path="v2" type="string" default="v2">
     Use the new V2 base URL https://api.etherscan.io/v2/api
   </ParamField>
-  <ParamField query="chainid" type="string" initialValue="1">
+  <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="stats">
+  <ParamField query="module" type="string" default="stats">
     Set to `stats` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="ethprice">
+  <ParamField query="action" type="string" default="ethprice">
     Set to `ethprice` for this endpoint.
   </ParamField>
   <ParamField query="apikey" type="string">
