--- a/api-reference/endpoint/ethsendrawtransaction.mdx
+++ b/api-reference/endpoint/ethsendrawtransaction.mdx
@@ -13,16 +13,16 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField path="v2" type="string" default="v2">
     Use the new V2 base URL https://api.etherscan.io/v2/api
   </ParamField>
-  <ParamField query="chainid" type="string" initialValue="1">
+  <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="proxy">
+  <ParamField query="module" type="string" default="proxy">
     Set to `proxy` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="eth_sendRawTransaction">
+  <ParamField query="action" type="string" default="eth_sendRawTransaction">
     Set to `eth_sendRawTransaction` for this endpoint.
   </ParamField>
-  <ParamField query="hex" type="string" initialValue="0xf904808000831cfde080">
+  <ParamField query="hex" type="string" default="0xf904808000831cfde080">
     The signed raw transaction data to broadcast.
   </ParamField>
   <ParamField query="apikey" type="string">
