--- a/api-reference/endpoint/gasestimate.mdx
+++ b/api-reference/endpoint/gasestimate.mdx
@@ -13,16 +13,16 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField path="v2" type="string" default="v2">
     Use the new V2 base URL https://api.etherscan.io/v2/api
   </ParamField>
-  <ParamField query="chainid" type="string" initialValue="1">
+  <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="gastracker">
+  <ParamField query="module" type="string" default="gastracker">
     Set to `gastracker` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="gasestimate">
+  <ParamField query="action" type="string" default="gasestimate">
     Set to `gasestimate` for this endpoint.
   </ParamField>
-  <ParamField query="gasprice" type="string" initialValue="2000000000">
+  <ParamField query="gasprice" type="string" default="2000000000">
     Gas price paid per unit of gas, in wei.
   </ParamField>
   <ParamField query="apikey" type="string">
