--- a/api-reference/endpoint/getblockreward.mdx
+++ b/api-reference/endpoint/getblockreward.mdx
@@ -9,16 +9,16 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
 
 <CreditChip description="Returns the block reward and uncle rewards for a block" />
 
-<ParamField query="chainid" type="string" initialValue="1">
+<ParamField query="chainid" type="string" default="1">
   Chain ID you query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
 </ParamField>
-<ParamField query="module" type="string" initialValue="block">
+<ParamField query="module" type="string" default="block">
   Set to `block` for this endpoint.
 </ParamField>
-<ParamField query="action" type="string" initialValue="getblockreward">
+<ParamField query="action" type="string" default="getblockreward">
   Set to `getblockreward` for this endpoint.
 </ParamField>
-<ParamField query="blockno" type="integer" initialValue="2165403">
+<ParamField query="blockno" type="integer" default="2165403">
   Block number to check rewards for.
 </ParamField>
 <ParamField query="apikey" type="string">
