--- a/api-reference/endpoint/getcontractcreation.mdx
+++ b/api-reference/endpoint/getcontractcreation.mdx
@@ -13,16 +13,16 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField path="v2" type="string" default="v2">
     Use the new V2 base URL https://api.etherscan.io/v2/api
   </ParamField>
-  <ParamField query="chainid" type="string" initialValue="1">
+  <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="contract">
+  <ParamField query="module" type="string" default="contract">
     Set to `contract` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="getcontractcreation">
+  <ParamField query="action" type="string" default="getcontractcreation">
     Set to `getcontractcreation` for this endpoint.
   </ParamField>
-  <ParamField query="contractaddresses" type="string" initialValue="0xB83c27805aAcA5C7082eB45C868d955Cf04C337F,0x68b3465833fb72A70ecDF485E0e4C7bD8665Fc45">
+  <ParamField query="contractaddresses" type="string" default="0xB83c27805aAcA5C7082eB45C868d955Cf04C337F,0x68b3465833fb72A70ecDF485E0e4C7bD8665Fc45">
     Up to 5 contract addresses, separated by commas.
   </ParamField>
   <ParamField query="apikey" type="string">
