--- a/api-reference/endpoint/getsourcecode.mdx
+++ b/api-reference/endpoint/getsourcecode.mdx
@@ -13,16 +13,16 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField path="v2" type="string" default="v2">
     Use the new V2 base URL https://api.etherscan.io/v2/api
   </ParamField>
-  <ParamField query="chainid" type="string" initialValue="1">
+  <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="contract">
+  <ParamField query="module" type="string" default="contract">
     Set to `contract` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="getsourcecode">
+  <ParamField query="action" type="string" default="getsourcecode">
     Set to `getsourcecode` for this endpoint.
   </ParamField>
-  <ParamField query="address" type="string" initialValue="0xBB9bc244D798123fDe783fCc1C72d3Bb8C189413">
+  <ParamField query="address" type="string" default="0xBB9bc244D798123fDe783fCc1C72d3Bb8C189413">
     The contract address to query.
   </ParamField>
   <ParamField query="apikey" type="string">
