--- a/api-reference/endpoint/tokenholderlist.mdx
+++ b/api-reference/endpoint/tokenholderlist.mdx
@@ -12,22 +12,22 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField path="v2" type="string" default="v2">
     Use the new V2 base URL https://api.etherscan.io/v2/api
   </ParamField>
-  <ParamField query="chainid" type="string" initialValue="1">
+  <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="token">
+  <ParamField query="module" type="string" default="token">
     Set to `token` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="tokenholderlist">
+  <ParamField query="action" type="string" default="tokenholderlist">
     Set to `tokenholderlist` for this endpoint.
   </ParamField>
-  <ParamField query="contractaddress" type="string" initialValue="0xaaaebe6fe48e54f431b0c390cfaf0b017d09d42d">
+  <ParamField query="contractaddress" type="string" default="0xaaaebe6fe48e54f431b0c390cfaf0b017d09d42d">
     Contract address of the ERC-20 token.
   </ParamField>
-  <ParamField query="page" type="integer" initialValue="1">
+  <ParamField query="page" type="integer" default="1">
     Page number for pagination.
   </ParamField>
-  <ParamField query="offset" type="integer" initialValue="10">
+  <ParamField query="offset" type="integer" default="10">
     Number of records per page.
   </ParamField>
   <ParamField query="apikey" type="string">
