--- a/api-reference/endpoint/tokeninfo.mdx
+++ b/api-reference/endpoint/tokeninfo.mdx
@@ -12,16 +12,16 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField path="v2" type="string" default="v2">
     Use the new V2 base URL https://api.etherscan.io/v2/api
   </ParamField>
-  <ParamField query="chainid" type="string" initialValue="1">
+  <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="token">
+  <ParamField query="module" type="string" default="token">
     Set to `token` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="tokeninfo">
+  <ParamField query="action" type="string" default="tokeninfo">
     Set to `tokeninfo` for this endpoint.
   </ParamField>
-  <ParamField query="contractaddress" type="string" initialValue="0x0e3a2a1f2146d86a604adc220b4967a898d7fe07">
+  <ParamField query="contractaddress" type="string" default="0x0e3a2a1f2146d86a604adc220b4967a898d7fe07">
     Contract address of the token to retrieve info for.
   </ParamField>
   <ParamField query="apikey" type="string">
