--- a/api-reference/endpoint/tokennfttx.mdx
+++ b/api-reference/endpoint/tokennfttx.mdx
@@ -9,34 +9,34 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
 
 <CreditChip description="Returns ERC-721 token transfers for an address" />
 
-  <ParamField query="chainid" type="string" initialValue="1" >
+  <ParamField query="chainid" type="string" default="1" >
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="account">
+  <ParamField query="module" type="string" default="account">
     Set to `account` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="tokennfttx">
+  <ParamField query="action" type="string" default="tokennfttx">
     Set to `tokennfttx` for this endpoint.
   </ParamField>
-  <ParamField query="contractaddress" type="string" initialValue="0x06012c8cf97bead5deae237070f9587f8e7a266d">
+  <ParamField query="contractaddress" type="string" default="0x06012c8cf97bead5deae237070f9587f8e7a266d">
     The ERC721 token contract address to filter transfers by, eg `0xbd3531da5cf5857e7cfaa92426877b022e612cf8` for [Pudgy Penguins](https://etherscan.io/token/0xbd3531da5cf5857e7cfaa92426877b022e612cf8).
   </ParamField>
-  <ParamField query="address" type="string" initialValue="0x6975be450864c02b4613023c2152ee0743572325">
+  <ParamField query="address" type="string" default="0x6975be450864c02b4613023c2152ee0743572325">
     Address to filter token transfers by.
   </ParamField>
-  <ParamField query="page" type="integer" initialValue="1">
+  <ParamField query="page" type="integer" default="1">
     Page number for pagination.
   </ParamField>
-  <ParamField query="offset" type="integer" initialValue="100">
+  <ParamField query="offset" type="integer" default="100">
     Number of transactions per page.
   </ParamField>
-  <ParamField query="startblock" type="integer" initialValue="0">
+  <ParamField query="startblock" type="integer" default="0">
     Starting block number to search from.
   </ParamField>
-  <ParamField query="endblock" type="integer" initialValue="27025780">
+  <ParamField query="endblock" type="integer" default="27025780">
     Ending block number to search to.
   </ParamField>
-  <ParamField query="sort" type="string" initialValue="asc">
+  <ParamField query="sort" type="string" default="asc">
     Sort order either `desc` for the latest transactions first or `asc` for the oldest transactions first.
   </ParamField>
   <ParamField query="apikey" type="string">
