--- a/api-reference/endpoint/txlist.mdx
+++ b/api-reference/endpoint/txlist.mdx
@@ -12,31 +12,31 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField path="v2" type="string" default="v2">
     Use the new V2 base URL https://api.etherscan.io/v2/api
   </ParamField>
-  <ParamField query="chainid" type="string" initialValue="1">
+  <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="account">
+  <ParamField query="module" type="string" default="account">
     Set to `account` for this endpoint
   </ParamField>
-  <ParamField query="action" type="string" initialValue="txlist">
+  <ParamField query="action" type="string" default="txlist">
     Set to `txlist` for this endpoint
   </ParamField>
-  <ParamField query="address" type="string" initialValue="0xc5102fE9359FD9a28f877a67E36B0F050d81a3CC">
+  <ParamField query="address" type="string" default="0xc5102fE9359FD9a28f877a67E36B0F050d81a3CC">
     The address to query, like `0xfefefefefefefefefefefefefefefefefefefefe`.
   </ParamField>
-  <ParamField query="startblock" type="integer" initialValue="0">
+  <ParamField query="startblock" type="integer" default="0">
     Starting block number to search from.
   </ParamField>
-  <ParamField query="endblock" type="integer" initialValue="99999999">
+  <ParamField query="endblock" type="integer" default="99999999">
     Ending block number to search to.
   </ParamField>
-  <ParamField query="page" type="integer" initialValue="1">
+  <ParamField query="page" type="integer" default="1">
     Page number for pagination.
   </ParamField>
-  <ParamField query="offset" type="integer" initialValue="10">
+  <ParamField query="offset" type="integer" default="10">
     Number of transactions per page.
   </ParamField>
-  <ParamField query="sort" type="string" initialValue="asc">
+  <ParamField query="sort" type="string" default="asc">
     Sort order either `desc` for the latest transactions first or `asc` for the oldest transactions first.
   </ParamField>
   <ParamField query="apikey" type="string">
