--- a/api-reference/endpoint/txlistinternal-blockrange.mdx
+++ b/api-reference/endpoint/txlistinternal-blockrange.mdx
@@ -9,28 +9,28 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
 
 <CreditChip description="Returns internal transactions within a block range" />
 
-  <ParamField query="chainid" type="string" initialValue="1" >
+  <ParamField query="chainid" type="string" default="1" >
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="account">
+  <ParamField query="module" type="string" default="account">
     Set to `account` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="txlistinternal">
+  <ParamField query="action" type="string" default="txlistinternal">
     Set to `txlistinternal` for this endpoint.
   </ParamField>
-  <ParamField query="startblock" type="integer" initialValue="13481773">
+  <ParamField query="startblock" type="integer" default="13481773">
     Starting block number to search from.
   </ParamField>
-  <ParamField query="endblock" type="integer" initialValue="13491773">
+  <ParamField query="endblock" type="integer" default="13491773">
     Ending block number to search to.
   </ParamField>
-  <ParamField query="page" type="integer" initialValue="1">
+  <ParamField query="page" type="integer" default="1">
     Page number for pagination.
   </ParamField>
-  <ParamField query="offset" type="integer" initialValue="10">
+  <ParamField query="offset" type="integer" default="10">
     Number of transactions per page.
   </ParamField>
-  <ParamField query="sort" type="string" initialValue="asc">
+  <ParamField query="sort" type="string" default="asc">
     Sort order either `desc` for the latest transactions first or `asc` for the oldest transactions first.
   </ParamField>
   <ParamField query="apikey" type="string">
