--- a/api-reference/endpoint/txsbeaconwithdrawal.mdx
+++ b/api-reference/endpoint/txsbeaconwithdrawal.mdx
@@ -9,31 +9,31 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
 
 <CreditChip description="Returns beacon chain withdrawals made to an address" />
 
-  <ParamField query="chainid" type="string" initialValue="1" >
+  <ParamField query="chainid" type="string" default="1" >
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="account">
+  <ParamField query="module" type="string" default="account">
     Set to `account` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="txsBeaconWithdrawal">
+  <ParamField query="action" type="string" default="txsBeaconWithdrawal">
     Set to `txsBeaconWithdrawal` for this endpoint.
   </ParamField>
-  <ParamField query="address" type="string" initialValue="0xB9D7934878B5FB9610B3fE8A5e441e8fad7E293f">
+  <ParamField query="address" type="string" default="0xB9D7934878B5FB9610B3fE8A5e441e8fad7E293f">
     Address to check for beacon withdrawals.
   </ParamField>
-  <ParamField query="startblock" type="integer" initialValue="0">
+  <ParamField query="startblock" type="integer" default="0">
     Starting block number to search from.
   </ParamField>
-  <ParamField query="endblock" type="integer" initialValue="99999999">
+  <ParamField query="endblock" type="integer" default="99999999">
     Ending block number to search to.
   </ParamField>
-  <ParamField query="page" type="integer" initialValue="1">
+  <ParamField query="page" type="integer" default="1">
     Page number for pagination.
   </ParamField>
-  <ParamField query="offset" type="integer" initialValue="100">
+  <ParamField query="offset" type="integer" default="100">
     Number of records per page.
   </ParamField>
-  <ParamField query="sort" type="string" initialValue="asc">
+  <ParamField query="sort" type="string" default="asc">
     Sort order either `desc` for the latest transactions first or `asc` for the oldest transactions first.
   </ParamField>
   <ParamField query="apikey" type="string">
