--- a/api-reference/endpoint/verifyvyper.mdx
+++ b/api-reference/endpoint/verifyvyper.mdx
@@ -13,16 +13,16 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField path="v2" type="string" default="v2">
     Use the new V2 base URL https://api.etherscan.io/v2/api
   </ParamField>
-  <ParamField query="chainid" type="string" initialValue="1">
+  <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="contract">
+  <ParamField query="module" type="string" default="contract">
     Set to `contract` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="verifysourcecode">
+  <ParamField query="action" type="string" default="verifysourcecode">
     Set to `verifysourcecode` for this endpoint.
   </ParamField>
-  <ParamField query="codeformat" type="string" initialValue="vyper-json">
+  <ParamField query="codeformat" type="string" default="vyper-json">
     Use `vyper-json` for Vyper contracts.
   </ParamField>
   <ParamField query="sourceCode" type="string">
@@ -31,16 +31,16 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField query="constructorArguments" type="string">
     Optional constructor arguments used in contract deployment.
   </ParamField>
-  <ParamField query="contractaddress" type="string" initialValue="0xBB9bc244D798123fDe783fCc1C72d3Bb8C189413">
+  <ParamField query="contractaddress" type="string" default="0xBB9bc244D798123fDe783fCc1C72d3Bb8C189413">
     The address where the contract is deployed.
   </ParamField>
-  <ParamField query="contractname" type="string" initialValue="contracts/Verified.vy:Verified">
+  <ParamField query="contractname" type="string" default="contracts/Verified.vy:Verified">
     The contract name, including path if applicable.
   </ParamField>
-  <ParamField query="compilerversion" type="string" initialValue="vyper:0.4.0">
+  <ParamField query="compilerversion" type="string" default="vyper:0.4.0">
     Compiler version used for compilation.
   </ParamField>
-  <ParamField query="optimizationUsed" type="string" initialValue="0">
+  <ParamField query="optimizationUsed" type="string" default="0">
     Use `1` if compiler optimizations were enabled, otherwise `0`.
   </ParamField>
   <ParamField query="apikey" type="string">
