--- a/api-reference/endpoint/balance.mdx
+++ b/api-reference/endpoint/balance.mdx
@@ -9,7 +9,13 @@ import { TryEndpointLink } from '/snippets/try-endpoint-link.jsx';
 
   <RequestExample>
 
-```https://api.etherscan.io/v2/api?chainid=1&module=account&action=balance&address=0xde0b295669a9fd93d5f28d9ec85e40f4cb697bae&tag=latest&apikey=YourApiKeyToken
+```plaintext Try in Your Browser
+https://api.etherscan.io/v2/api?chainid=1&module=account&action=balance&address=0xf5690ee572102ef19fa5d0452b71e395eaae3083&tag=latest&apikey=YourApiKeyToken
+```
+
+```bash cURL
+curl --request POST \
+    --url https://dog-api.kinduff.com/api/facts
 ```
 
 </RequestExample>
